[package]
name = "knhk-cli"
version = "1.0.0"
edition = "2021"
description = "High-performance RDF/SPARQL processing CLI with hot path optimization"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-cli"
keywords = ["rdf", "sparql", "cli", "performance", "simd"]
categories = ["command-line-utilities", "database"]
license = "MIT"
authors = ["KNHK Team"]

[dependencies]
clap-noun-verb = { workspace = true }
clap-noun-verb-macros = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-warm = { path = "../knhk-warm", version = "1.0.0", features = ["std"] }
knhk-config = { path = "../knhk-config", version = "1.0.0", features = ["std"] }
knhk-etl = { path = "../knhk-etl", version = "1.0.0", features = [
  "std",
], optional = true }
knhk-connectors = { path = "../knhk-connectors", version = "1.0.0", features = [
  "std",
], optional = true }
knhk-lockchain = { path = "../knhk-lockchain", version = "1.0.0", features = [
  "std",
] }
knhk-validation = { path = "../knhk-validation", version = "1.0.0", features = [
  "std",
] }
knhk-workflow-engine = { path = "../knhk-workflow-engine", version = "1.0.0", optional = true }
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
knhk-sidecar = { path = "../knhk-sidecar", version = "1.0.0", optional = true, features = [
  "fortune5",
] }
process_mining = "0.3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "fs"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
oxigraph = { workspace = true, optional = true }
sha2 = { workspace = true }
knhk-otel = { path = "../knhk-otel", version = "1.0.0", optional = true, features = [
  "std",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simd-json = { version = "0.14", features = ["known-key"] }
thiserror = { workspace = true }
linkme = "0.3"
chrono = { workspace = true, features = ["serde"] }
dirs = "5.0"
serde_yaml = "0.9"

# OpenTelemetry dependencies - all optional with std feature
opentelemetry = { workspace = true, optional = true, default-features = false }
opentelemetry_sdk = { workspace = true, optional = true, default-features = false }
opentelemetry-otlp = { workspace = true, optional = true, default-features = false }
opentelemetry-http = { workspace = true, optional = true, default-features = false }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
  "ansi",
], optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json", "blocking"] }

[features]
default = ["std", "otel"]
std = []
minimal = ["std"] # Core only, no optional deps
workflow = ["knhk-workflow-engine"]
etl = ["knhk-etl"]
connectors = ["knhk-connectors"]
fortune5 = ["knhk-sidecar"]
otel = [
  "knhk-otel",
  "opentelemetry",
  "opentelemetry_sdk",
  "opentelemetry-otlp",
  "opentelemetry-http",
  "tracing",
  "tracing-opentelemetry",
  "tracing-subscriber",
  "opentelemetry-semantic-conventions",
  "reqwest",
]
full = ["std", "otel", "workflow", "etl", "connectors", "fortune5"]

[[bin]]
name = "knhk"
path = "src/main.rs"

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
tempfile = { workspace = true }
