[package]
name = "knhk-closed-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519 = "2.2"
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
oxigraph = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dashmap = "5.5"
arc-swap = "1.6"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
wiremock = "0.5"

[[test]]
name = "closed_loop_chicago_tdd"
path = "tests/closed_loop_chicago_tdd.rs"
