[package]
name = "knhk-closed-loop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519 = "2.2"
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
oxigraph = "0.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dashmap = "5.5"
arc-swap = "1.6"
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
rayon = "1.8"
futures = "0.3"

# LLM Client Dependencies (for Phase 7 - LLM Proposer)
# Note: ollama-rs or similar LLM client library would be added here
# For production, use: ollama-rs = "0.2" or openai-api-rs = "4.0"
# reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"

[[test]]
name = "closed_loop_chicago_tdd"
path = "tests/closed_loop_chicago_tdd.rs"

[[bench]]
name = "performance_profile"
harness = false
