[package]
name = "knhk-config"
version = "0.5.0"
edition = "2021"
authors = ["KNHK Core Team"]
description = "Configuration management for KNHK (TOML + environment variables)"
license = "MIT"

[lib]
name = "knhk_config"
crate-type = ["rlib"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = []

[dev-dependencies]

