[package]
name = "knhk-config"
version = "1.0.0"
edition = "2021"
description = "Configuration management for the KNHK framework"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-config"
keywords = ["config", "toml", "configuration", "settings", "rdf"]
categories = ["config", "parsing"]
license = "MIT"
authors = ["KNHK Team"]

[lib]
name = "knhk_config"
crate-type = ["lib"]

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = []

[dev-dependencies]
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
