[package]
name = "knhk-consensus"
version = "8.0.0"
edition = "2021"
authors = ["KNHK Team"]
description = "Byzantine fault-tolerant consensus engine for distributed KNHK deployments (Phase 8)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knhk/knhk"
keywords = ["consensus", "byzantine", "pbft", "hotstuff", "distributed"]
categories = ["development-tools", "network-programming", "algorithms"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Cryptography
ed25519-dalek = "2.1"
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.5"

# Hashing and state
lz4 = "1.24"

# Observability
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic", "metrics", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
prometheus = "0.13"

# Networking
axum = "0.7"
tonic = "0.10"
prost = "0.12"
hyper = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
test-case = "3.3"
tokio-test = "0.4"

[[bench]]
name = "consensus_latency"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["consensus"]
consensus = []
byzantine-detection = []
multi-region = []
