[package]
name = "knhk-etl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
knhk-connectors = { path = "../knhk-connectors", version = "0.1.0", features = ["std"] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-lockchain = { path = "../knhk-lockchain", version = "0.1.0", features = ["std"] }
knhk-otel = { path = "../knhk-otel", version = "0.1.0", features = ["std"] }
hashbrown = { version = "0.15", default-features = false }
hex = { version = "0.4", default-features = false }
oxigraph = { version = "0.5" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = { version = "1.0" }
rdkafka = { version = "0.36" }

[features]
default = ["std"]
std = []
grpc = []
knhk-otel = []
knhk-lockchain = []
[dev-dependencies]
# Test dependencies
knhk-unrdf = { path = "../knhk-unrdf" }
