[package]
name = "knhk-etl"
version = "1.0.0"
edition = "2021"
description = "ETL pipeline framework for RDF processing with Chicago TDD"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-etl"
keywords = ["rdf", "etl", "pipeline", "chicago-tdd", "processing"]
categories = ["database", "development-tools"]
license = "MIT"
authors = ["KNHK Team"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
knhk-connectors = { path = "../knhk-connectors", version = "1.0.0", features = [
  "std",
] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-lockchain = { path = "../knhk-lockchain", version = "1.0.0" }
knhk-otel = { path = "../knhk-otel", version = "1.0.0", features = ["std"] }
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
hashbrown = { version = "0.15", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
blake3 = { workspace = true, default-features = false }
oxigraph = { workspace = true, optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = { version = "1.0" }
simd-json = { version = "0.14", features = ["known-key"] }
rdkafka = { version = "0.36" }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = "0.31"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = { workspace = true, optional = true }

[features]
default = ["std", "knhk-otel", "knhk-lockchain", "parallel"]
std = []
grpc = []
knhk-otel = []
knhk-lockchain = []
tokio-runtime = []
parallel = ["rayon"]
profiling = []
rdf = ["oxigraph"]
[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
# Test dependencies
sha2 = "0.10"
# Benchmark dependencies
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hot_path_performance"
harness = false

[[bench]]
name = "buffer_pooling"
harness = false

[[bench]]
name = "json_parsing_bench"
harness = false
