[package]
name = "knhk-hot"
version = "1.0.0"
edition = "2021"
description = "Hot path optimization engine with SIMD acceleration for RDF"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-hot"
keywords = ["rdf", "simd", "performance", "optimization", "hot-path"]
categories = ["algorithms", "no-std"]
license = "MIT"
authors = ["KNHK Team"]

[lib]
name = "knhk_hot"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
blake3 = "1.5"
subtle = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
perf-event = "0.4"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "hot_path_bench"
harness = false

[[bench]]
name = "cycle_bench"
harness = false

[[bench]]
name = "simd_predicates"
harness = false

[[bench]]
name = "tick_budget"
harness = false

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true  # Keep debug symbols for perf analysis

