[package]
name = "knhk-hot"
version = "1.0.0"
edition = "2021"
description = "Hot path optimization engine with SIMD acceleration for RDF"
repository = "https://github.com/yourusername/knhk"
homepage = "https://github.com/yourusername/knhk"
documentation = "https://docs.rs/knhk-hot"
keywords = ["rdf", "simd", "performance", "optimization", "hot-path"]
categories = ["algorithms", "no-std"]
license = "MIT"
authors = ["KNHK Team"]

[lib]
name = "knhk_hot"
# TRIZ Principle 2 (Taking Out): Default to rlib (pure Rust)
# C optimization is optional via feature flag
crate-type = ["rlib"]

[dependencies]
blake3 = { workspace = true }
subtle = "2.5"

[dev-dependencies]
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.16"

[target.'cfg(target_os = "linux")'.dev-dependencies]
perf-event = "0.4"

[build-dependencies]
# cc is required for knhk-hot (FFI wrapper library needs C compiler)
cc = { version = "1.0" }

[features]
# knhk-hot is fundamentally a Rust wrapper around C FFI
# C compilation is required for all functionality
# Pure Rust rewrite would require complete reimplementation
default = ["c-optimization"]
c-optimization = []

[[bench]]
name = "hot_path_bench"
harness = false

[[bench]]
name = "cycle_bench"
harness = false

[[bench]]
name = "simd_predicates"
harness = false

[[bench]]
name = "hot_path_iai"
harness = false
