[package]
name = "knhk-integration-tests"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "integration_test"
path = "src/main.rs"

[dependencies]
# Core testcontainers (using aligned compatible versions)
testcontainers = { version = "0.25", features = ["blocking"] }
testcontainers-modules = { version = "0.13", features = ["kafka", "postgres"] }
tokio = { version = "1.35", features = ["full"] }

# KNHK components
knhk-connectors = { path = "../knhk-connectors", features = ["std"] }
knhk-etl = { path = "../knhk-etl", features = ["std"] }
knhk-hot = { path = "../knhk-hot", version = "1.0.0" }
knhk-otel = { path = "../knhk-otel" }
knhk-sidecar = { path = "../knhk-sidecar", optional = true }

# Utilities
anyhow = "1.0"

[features]
sidecar = ["dep:knhk-sidecar", "knhk-sidecar/otel"]

[dev-dependencies]
