[package]
name = "knhk-json-bench"
version = "0.1.0"
edition = "2021"
authors = ["KNHK Team"]
license = "MIT"
description = "JSON parsing benchmark using knhk-hot and knhk-patterns"

[dependencies]
# Full KNHK framework stack (reference implementation)
knhk-hot = { path = "../knhk-hot" }
knhk-patterns = { path = "../knhk-patterns" }
knhk-etl = { path = "../knhk-etl" }
knhk-warm = { path = "../knhk-warm" }
blake3 = { workspace = true }
hex = "0.4"

[dev-dependencies]
chicago-tdd-tools = { version = "1.3.0", features = ["testing-extras", "otel", "weaver", "testcontainers", "async"] }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
simd-json = "0.13"

[[bench]]
name = "json_parse_bench"
harness = false

[lib]
name = "knhk_json_bench"
path = "src/lib.rs"
