[package]
name = "knhk-kms-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"

# SIMD support
wide = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async runtime (for KMS provider integration)
tokio = { version = "1.0", features = ["full"], optional = true }

# AWS SDK (optional)
aws-sdk-kms = { version = "1.0", optional = true }

# Tracing
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio-test = "0.4"

[features]
default = []
nightly = []
aws = ["tokio", "aws-sdk-kms"]
simd = []

[[bench]]
name = "simd_bench"
harness = false

[[bench]]
name = "dispatch_bench"
harness = false

[lib]
bench = false
