[package]
name = "knhk-lockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Use sha3 in no_std mode with proper features
sha3 = { version = "0.10", default-features = false }
# SHA-256 for receipts (URDNA2015 + SHA-256)
sha2 = { version = "0.10", default-features = false }
# JSON serialization for Git receipts
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
# Hex encoding for Git receipts
hex = { version = "0.4", optional = true, default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["sha3/std", "sha2/std", "serde", "serde_json", "hex"]

