[package]
name = "knhk-lockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
thiserror = "1.0"
sha2 = "0.10"
git2 = "0.18"
hex = "0.4"
# Note: Full URDNA2015 canonicalization deferred to v1.1
# For v1.0, using basic canonicalization (sorting + normalization)

[dev-dependencies]

