[package]
name = "knhk-marketplace"
version = "0.10.0"
edition = "2021"
description = "KNHK Phase 10: Market deployment, licensing, and billing system"
authors = ["KNHK Core Team"]
license = "Apache-2.0"

[dependencies]
# HTTP and networking
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Identifiers and cryptography
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"
dotenv = "0.15"

# Database (for licensing and billing persistence)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Rate limiting
governor = "0.10"

# Metrics and telemetry
prometheus = "0.13"

# Semantic versioning
semver = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
