[package]
name = "knhk-mu-kernel"
version = "2027.0.0"
edition = "2021"
authors = ["KNHK Kernel Team"]
description = "μ-kernel for knowledge operations - ISA-level implementation"
license = "MIT"

[lib]
name = "knhk_mu_kernel"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["verification", "simd"]
minimal = []  # μ_hot only, no dependencies
verification = ["proptest", "quickcheck"]
simd = []
asm = []  # Inline assembly for cycle counting

[dependencies]
# Minimal dependencies for μ_hot
sha3 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["digest"] }

# Type-level programming
typenum = "1.17"
const-generic-wrap = "0.2"

# SIMD
wide = { version = "0.7", optional = true }

# Verification (dev/test only, not in μ_hot)
proptest = { version = "1.4", optional = true }
quickcheck = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"

[[bench]]
name = "mu_hot_path"
harness = false

[[bench]]
name = "sigma_compilation"
harness = false

[[bench]]
name = "chatman_constant"
harness = false

[[bench]]
name = "mu_ops"
harness = false

[[bench]]
name = "patterns"
harness = false

[[bench]]
name = "guards"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = false  # Keep symbols for verification

[profile.mu-hot]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false  # μ_hot is bounds-checked manually
