[package]
name = "knhk-neural"
version = "6.0.0"
edition = "2021"
description = "Phase 6: Advanced Neural Integration with Self-Learning Workflows"
authors = ["KNHK Team"]
license = "MIT"

[dependencies]
# Core ML dependencies
ndarray = "0.15"
ndarray-rand = "0.15"
ndarray-stats = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Parallel processing
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Async
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

# Type utilities
typenum = "1.17"

# Logging and tracing (for MAPE-K integration)
tracing = "0.1"
tracing-subscriber = "0.3"

# Hash utilities
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1.35", features = ["full"] }

# Note: bench and examples are optional configurations
# [[bench]]
# name = "neural_training"
# harness = false
#
# [[example]]
# name = "self_learning_workflow"
# path = "examples/self_learning_workflow.rs"

[features]
default = ["neural"]
neural = []
gpu = []
distributed = []
